methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  avance(6)
        ^