methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  avance(6)
}